--- a/src/Club/UserBundle/Resources/views/Auth/login.html.twig
+++ b/src/Club/UserBundle/Resources/views/Auth/login.html.twig
@@ -1,10 +1,70 @@
-{% extends "::base.html.twig" %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta http-equiv="content-language" content="en" />
+        <meta name="robots" content="noindex,nofollow" />
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/reset.css') }}" /> <!-- RESET -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/main.css') }}" /> <!-- MAIN STYLE SHEET -->
+        <!--[if lte IE 6]><link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/main-ie6.css') }}" /><![endif]--> <!-- MSIE6 -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/style.css') }}" /> <!-- GRAPHIC THEME -->
+        <link rel="stylesheet" media="screen,projection" type="text/css" href="{{ asset('css/mystyle.css') }}" /> <!-- WRITE YOUR CSS CODE HERE -->
+        <script type="text/javascript" src="{{ asset('js/toggle.js') }}"></script>
+        <title>Adminizio - Log In</title>
+</head>
 
-{% block body %}
-{{ app.session.flash('notice') }}
-<form method="post" action="{{ path('_security_check') }}">
-  <input type="text" name="_username" />
-  <input type="password" name="_password" />
-<input type="submit" />
-</form>
-{% endblock %}
+<body id="login">
+
+<div id="main-02">
+
+        <div id="login-top"></div>
+
+        <div id="login-box">
+
+                <!-- Logo -->
+                <p class="nom t-center"><a href="#"><img src="{{ asset('images/logo.gif') }}" alt="Our logo" title="Visit Site" /></a></p>
+
+                <!-- Messages -->
+                <p class="msg error">The password you have entered is incorrect. <a href="#">Forgot password?</a></p>
+
+                <p class="msg info">Enter your username and password.</p>
+
+                <!-- Form -->
+                <table class="nom nostyle">
+                        <tr>
+                                <td style="width:75px;"><label for="login-user"><strong>Username:</strong></label></td>
+                                <td><input type="text" size="45" name="" class="input-text" id="login-user" /></td>
+                        </tr>
+                        <tr>
+                                <td><label for="login-pass"><strong>Password:</strong></label></td>
+                                <td><input type="password" size="45" name="" class="input-text" id="login-pass" /></td>
+                        </tr>
+                        <tr>
+                                <td></td>
+                                <td>
+                                        <span class="f-right"><a href="javascript:toggle('sendpass');">Forgot password?</a></span>
+                                        <span class="f-left low"><input type="checkbox" name="" value="" id="login-remember" /> <label for="login-remember">Remember me</label></span>
+                                </td>
+                        </tr>
+                        <!-- Show/Hide -->
+                        <tr id="sendpass" style="display:none;">
+                                <td><label for="login-sendpass"><strong>E-mail:</strong></label></td>
+                                <td>
+                                        <input type="text" size="35" name="" class="input-text f-left" id="login-sendpass" />
+                                        <span class="f-right"><input type="submit" value="Send" /></span>
+                                </td>
+                        </tr>
+                        <tr>
+                                <td colspan="2" class="t-right"><input type="submit" class="input-submit" value="Sign In &raquo;" /></td>
+                        </tr>
+                </table>
+
+        </div> <!-- /login-box -->
+
+        <div id="login-bottom"></div>
+
+</div> <!-- /main -->
+
+</body>
+</html>
+
