--- a/src/Club/ShopBundle/Resources/views/Shop/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/index.html.twig
@@ -4,6 +4,8 @@
 
 <h1>Shop</h1>
 
+<p class="box"><a href="{{ path('shop_checkout') }}" class="btn-info"><span>View basket</span></a></p> 
+
 {% if categories|length > 0 %}
 <h3>Categories</h3>
 
