--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -102,11 +102,11 @@
                                 </form>
 
                                 <!-- Create a new user -->
-                                <p id="btn-create" class="box"><a href="#"><span>Create a new user</span></a></p>
+                                <p id="btn-create" class="box"><a href="{{ path('user_new') }}"><span>Create a new user</span></a></p>
 
                         </div> <!-- /padding -->
 
-                        {% include "::right_menu.html.twig" %}
+                        {% include "::left_menu.html.twig" %}
 
                 </div> <!-- /aside -->
 
