Added flash messages Added design to location

--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -2,6 +2,6 @@
   <li><a href="{{ path('user') }}">User</a></li>
   <li><a href="{{ path('user') }}">Mail</a></li>
   <li id="submenu-active"><a href="{{ path('shop') }}">Shop</a></li>
-  <li><a href="{{ path('user') }}">User</a></li>
+  <li><a href="{{ path('user') }}">Admin</a></li>
 </ul>
 
