--- a/app/Resources/views/top_menu.html.twig
+++ b/app/Resources/views/top_menu.html.twig
@@ -21,9 +21,9 @@
   <!-- Dropdown menu -->
     <div class="drop">
       <ul class="box">
-        <li><a href="#">Locations</a></li>
-        <li><a href="#">Groups</a></li>
-        <li><a href="#">Roles</a></li>
+        <li><a href="{{ path('location') }}">Locations</a></li>
+        <li><a href="{{ path('group') }}">Groups</a></li>
+        <li><a href="{{ path('role') }}">Roles</a></li>
         <li><a href="#">Configuration</a></li>
       </ul>
     </div> <!-- /drop -->
