--- a/src/Club/UserBundle/Resources/views/Location/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/Location/new.html.twig
@@ -1,11 +1,18 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
+<h1>Location</h1>
+
 {{ app.session.flash('notice') }}
+
 <form method="post" action="{{ path('location_new') }}">
 
-{{ form_field(form) }}
-<div><input type="submit" /></div>
+  <p>{{ form_field(form) }}</p>
 
+  <hr class="noscreen" />
+  <div class="box-01">
+    <p class="nom"><input type="submit" value="Save" class="input-submit" /></p>
+  </div> <!-- /box-01 -->
 </form>
+
 {% endblock %}
