--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -7,11 +7,11 @@
 <p class="box">
   <a href="{{ path('shop_checkout_empty') }}" class="btn-info"><span>Empty basket</span></a>
   <a href="{{ path('shop') }}" class="btn-info"><span>Continue shopping</span></a>
-  <a href="{{ path('shop_category') }}" class="btn-info"><span>To payment</span></a>
+  <a href="{{ path('shop_category') }}" class="btn-info"><span>Checkout</span></a>
 </p>
 
 
-<h3>Checkout</h3>
+<h3>Basket</h3>
 
 <div id="sf_admin_container">
 <table>
