--- a/src/Club/UserBundle/Resources/views/Role/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Role/index.html.twig
@@ -1,23 +1,31 @@
 {% extends "::base.html.twig" %}
 
 {% block body %}
+<h1>Role</h1>
+<p class="box"><a href="{{ path('role_new') }}" class="btn-create"><span>Create role</span></a></p>
 
-{{ app.session.flash('notice') }}
+{% include "::flash.html.twig" %}
 
 <form method="post" action="{{ path('role_batch') }}">
 <table>
   <thead>
     <tr>
-      <th><input type="checkbox" /></th>
+      <th>[x]</th>
       <th>Id</th>
-      <th>Username</th>
-      <th>Created At</th>
+      <th>Role</th>
       <th>Actions</th>
     </tr>
   </thead>
   <tfoot>
-    <tr>
-      <th colspan="5">x Results</th>
+    <tr class="bg">
+      <td colspan="4" class="arrow-01">
+        <select name="" class="input-text">
+          <option value="">Delete selected</option>
+          <option value="">Remove selected</option>
+          <option value="">Rename selected</option>
+          <option value="">Copy selected</option>
+        </select>&nbsp;<input type="submit" value="OK" />
+      </td>
     </tr>
   </tfoot>
   <tbody>
@@ -26,24 +34,18 @@
       <td><input type="checkbox" /></td>
       <td>{{ role.id }}</td>
       <td>{{ role.roleName }}</td>
-      <td><ul>
-        <li><a href="{{ path('role_edit', { 'id':role.id }) }}">Edit</a></li>
-        <li><a href="{{ path('role_delete', { 'id':role.id }) }}">Delete</a></li>
-      </ul></td>
+      <td>
+        {% include "::edit_link.html.twig" with {'url':path('role_edit', { 'id':role.id })} %}
+        {% include "::delete_link.html.twig" with {'url':path('role_delete', { 'id':role.id })} %}
+      </td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">There are no roles at the time</td>
+    <td colspan="5">There are no roles at the time.</td>
   </tr>
   {% endfor %}
   </tbody>
 </table>
-<ul>
-  <li><select name="batch_action">
-    <option value="batchDelete">Delete</option>
-  </select>
-  <input type="submit" /></li>
-  <li><a href="{{ path('role_new') }}">New</a></li>
-</ul>
 </form>
+
 {% endblock %}
