--- a/app/Resources/views/top_menu.html.twig
+++ b/app/Resources/views/top_menu.html.twig
@@ -3,9 +3,9 @@
 </ul>
 
 <ul class="box">
-  <li id="menu-active"><a href="{{ path('user') }}"><span>User</span></a></li>
-  <li><a href="{{ path('user') }}"><span>Mail</span></a></li>
-  <li onmouseover="this.className = 'dropdown-on'" onmouseout="this.className = 'dropdown-off'"><div><a href="{{ path('shop') }}"><span>Shop</span></a>
+  <li {% if app.request.attributes.get('_route') == 'user' %} id="menu-active"{% endif %}><a href="{{ path('user') }}"><span>User</span></a></li>
+  <li {% if app.request.attributes.get('_route') == 'mail' %} id="menu-active"{% endif %}><a href="{{ path('user') }}"><span>Mail</span></a></li>
+  <li {% if app.request.attributes.get('_route') == 'shop' %} id="menu-active"{% endif %} onmouseover="this.className = 'dropdown-on'" onmouseout="this.className = 'dropdown-off'"><div><a href="{{ path('shop') }}"><span>Shop</span></a>
   <!-- Dropdown menu -->
     <div class="drop">
       <ul class="box">
@@ -17,7 +17,7 @@
     </div> <!-- /drop -->
   </div></li>
 
-  <li onmouseover="this.className = 'dropdown-on'" onmouseout="this.className = 'dropdown-off'"><div><a href="#"><span>Admin</span></a>
+  <li {% if app.request.attributes.get('_route') == 'admin' %} id="menu-active"{% endif %} onmouseover="this.className = 'dropdown-on'" onmouseout="this.className = 'dropdown-off'"><div><a href="#"><span>Admin</span></a>
   <!-- Dropdown menu -->
     <div class="drop">
       <ul class="box">
