Started to add the payment method

--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -7,9 +7,8 @@
 <p class="box">
   <a href="{{ path('shop_checkout_empty') }}" class="btn-info"><span>Empty basket</span></a>
   <a href="{{ path('shop') }}" class="btn-info"><span>Continue shopping</span></a>
-  <a href="{{ path('shop_category') }}" class="btn-info"><span>Checkout</span></a>
+  <a href="{{ path('shop_checkout_payment') }}" class="btn-info"><span>Checkout</span></a>
 </p>
-
 
 <h3>Basket</h3>
 
