--- a/web/css/style.css
+++ b/web/css/style.css
@@ -146,6 +146,8 @@ OTHERS
 #content .label-03 {background-color:#0A79AE;}
 #content .label-04 {background-color:#FC4; color:#000;}
 #content .label-05 {background-color:#555;}
+#content .label-06 {background-color:#555;}
+#content .label-06 a {color:#FFF;}
 .high {color:#df0000;}
 .high-bg {background:#FFB;}
 .low {color:#707070;}
