Fixed create new user form.

--- a/src/Club/UserBundle/Resources/views/User/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/new.html.twig
@@ -4,7 +4,7 @@
 <h1>User</h1>
 
 <form method="post" action="{{ path('user_new') }}">
-  <p>{{ form_field(form) }}</p>
+  <p>{{ form_widget(form) }}</p>
   {% include "::submit_button.html.twig" %}
 </form>
 
