--- a/src/Club/UserBundle/Resources/views/User/edit.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/edit.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <h1>User</h1>
 
-<form method="post" action="{{ path('user_new') }}">
+<form method="post" action="{{ path('user_edit', {'id':user.id}) }}">
 {% include "ClubUserBundle:User:form.html.twig" with {'form': form} %}
 </form>
 
