--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -8,55 +8,15 @@
 
 {% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
 
-<p>&#160;</p>
+<h3>Order</h3>
 
 <div id="sf_admin_container">
-<table>
-  <thead>
-  <tr>
-    <th width="250">Produkt</th>
-    <th width="80">Pris</th>
-    <th width="80">Antal</th>
-    <th width="70">Total</th>
-  </tr>
-  </thead>
-  <tbody>
-  {% for item in basket_items %}
-  <tr>
-    <td>{{ item.name }}</td>
-    <td>{{ item.price }}</td>
-    <td>{{ item.qty }}</td>
-    <td>{{ item.qty*item.price }}</td>
-  </tr>
-  {% else %}
-  <tr>
-    <td colspan="4">Your basket is empty.</td>
-  </tr>
-  {% endfor %}
-  </tbody>
-  <tfoot>
-  <tr>
-    <td colspan="4">&#160;</td>
-  </tr>
-  <tr>
-    <td style="text-align: right; padding-right: 20px;" colspan="3">Sub total</td>
-    <td>{{ basket.price }}</td>
-  </tr>
-  <tr>
-    <td style="text-align: right; padding-right: 20px;" colspan="3">VAT</td>
-    <td>0%</td>
-  </tr>
-  <tr>
-    <td style="text-align: right; padding-right: 20px;" colspan="3"><b>Total</b></td>
-    <td>{{ basket.price }}</td>
-  </tr>
-  </tfoot>
-</table>
+{% include "ClubShopBundle:Checkout:order_form.html.twig" %}
 
 <p class="box">
   <a href="{{ path('shop_checkout_empty') }}" class="btn-info"><span>Empty basket</span></a>
   <a href="{{ path('shop') }}" class="btn-info"><span>Continue shopping</span></a>
-  <a href="{{ path('shop_checkout_payment') }}" class="btn-info"><span>Checkout</span></a>
+  <a href="{{ path('shop_checkout_shipping') }}" class="btn-info"><span>Checkout</span></a>
 </p>
 
 {% endblock %}
