--- a/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/payment.html.twig
@@ -11,7 +11,7 @@
 <fieldset>
   <legend>Payment Information</legend>
 
-  <p>{{ form_field(form) }}</p>
+  <p>{{ form_widget(form) }}</p>
   <p><input type="submit" value="Continue" class="input-submit" /></p>
 </fieldset>
 </form>
