Added a new version of basket, its now an object of the entity model

--- a/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
@@ -18,7 +18,7 @@
 <h3>Payment information</h3>
 <p>{{ order.paymentMethod }}</p>
 
-<form method="POST" action="{{ path('shop_checkout_payment') }}">
+<form method="POST" action="{{ path('shop_checkout_confirm') }}">
   <div class="box-01">
     <p class="nom"><input type="submit" value="Place Order" class="input-submit" /></p>
   </div> <!-- /box-01 -->
