--- a/src/Club/ShopBundle/Resources/views/Checkout/order_form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/order_form.html.twig
@@ -8,12 +8,12 @@
   </tr>
   </thead>
   <tbody>
-  {% for item in basket_items %}
+  {% for item in order.orderProducts %}
   <tr>
-    <td>{{ item.name }}</td>
+    <td>{{ item.productName }}</td>
     <td>{{ item.price }}</td>
-    <td>{{ item.qty }}</td>
-    <td>{{ item.qty*item.price }}</td>
+    <td>{{ item.quantity }}</td>
+    <td>{{ item.quantity*item.price }}</td>
   </tr>
   {% else %}
   <tr>
@@ -27,7 +27,7 @@
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3">Sub total</td>
-    <td>{{ basket.price }}</td>
+    <td>{{ order.price }}</td>
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3">VAT</td>
@@ -35,7 +35,7 @@
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3"><b>Total</b></td>
-    <td>{{ basket.price }}</td>
+    <td>{{ order.price }}</td>
   </tr>
   </tfoot>
 </table>
