Renamed basket to cart And moved cart to database instead of session handled

--- a/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
@@ -10,7 +10,7 @@
 <h3>Order</h3>
 
 <div id="sf_admin_container">
-{% include "ClubShopBundle:Checkout:order_form.html.twig" %}
+{% include "ClubShopBundle:Checkout:cart_form.html.twig" %}
 
 <h3>Billing information</h3>
 <p>{{ user.profile.name }}</p>
