--- a/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/cart_form.html.twig
@@ -8,7 +8,7 @@
   </tr>
   </thead>
   <tbody>
-  {% for item in order.orderProducts %}
+  {% for item in cart.cartProducts %}
   <tr>
     <td>{{ item.productName }}</td>
     <td>{{ item.price }}</td>
@@ -17,7 +17,7 @@
   </tr>
   {% else %}
   <tr>
-    <td colspan="4">Your basket is empty.</td>
+    <td colspan="4">Your cart is empty.</td>
   </tr>
   {% endfor %}
   </tbody>
@@ -27,7 +27,7 @@
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3">Sub total</td>
-    <td>{{ order.price }}</td>
+    <td>{{ cart.price }}</td>
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3">VAT</td>
@@ -35,7 +35,7 @@
   </tr>
   <tr>
     <td style="text-align: right; padding-right: 20px;" colspan="3"><b>Total</b></td>
-    <td>{{ order.price }}</td>
+    <td>{{ cart.price }}</td>
   </tr>
   </tfoot>
 </table>
