--- a/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/index.html.twig
@@ -4,17 +4,17 @@
 
 <h1>Shop</h1>
 
-<h3>Basket</h3>
+<h3>Cart</h3>
 
 {% include "ClubShopBundle:Checkout:checkouttop.html.twig" %}
 
 <h3>Order</h3>
 
 <div id="sf_admin_container">
-{% include "ClubShopBundle:Checkout:order_form.html.twig" %}
+{% include "ClubShopBundle:Checkout:cart_form.html.twig" %}
 
 <p class="box">
-  <a href="{{ path('shop_checkout_empty') }}" class="btn-info"><span>Empty basket</span></a>
+  <a href="{{ path('shop_checkout_empty') }}" class="btn-info"><span>Empty cart</span></a>
   <a href="{{ path('shop') }}" class="btn-info"><span>Continue shopping</span></a>
   <a href="{{ path('shop_checkout_shipping') }}" class="btn-info"><span>Checkout</span></a>
 </p>
