--- a/src/Club/ShopBundle/Resources/views/Product/index.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Product/index.html.twig
@@ -17,7 +17,7 @@
     <td><ul>
       <li><a href="{{ path("shop_product_edit",{"id":product.id}) }}">Edit</li>
       <li><a href="{{ path("shop_product_delete",{"id":product.id}) }}">Delete</li>
-      <li><a href="{{ path("shop_product_basket",{"id":product.id}) }}">Put in basket</li>
+      <li><a href="{{ path("shop_product_cart",{"id":product.id}) }}">Put in cart</li>
     </ul></td>
   </tr>
 {% else %}
