--- a/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Shop/category.html.twig
@@ -4,7 +4,7 @@
 
 <h1>Shop</h1>
 
-<p class="box"><a href="{{ path('shop_checkout') }}" class="btn-info"><span>View basket</span></a></p>
+<p class="box"><a href="{{ path('shop_checkout') }}" class="btn-info"><span>View cart</span></a></p>
 
 {% if categories|length > 0 %}
 <h3>Categories</h3>
@@ -42,7 +42,7 @@
     <tr>
       <td>{{ product.productName }}</td>
       <td>{{ product.price }}</td>
-      <td><a href="{{ path('shop_product_basket', {'id':product.id}) }}">Put in basket</a></td>
+      <td><a href="{{ path('shop_product_cart', {'id':product.id}) }}">Put in cart</a></td>
     </tr>
     {% else %}
     <tr>
