Renamed to cart in checkout controller.

--- a/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Checkout/review.html.twig
@@ -16,7 +16,7 @@
 <p>{{ user.profile.name }}</p>
 
 <h3>Payment information</h3>
-<p>{{ order.paymentMethod }}</p>
+<p>{{ cart.paymentMethod }}</p>
 
 <form method="POST" action="{{ path('shop_checkout_confirm') }}">
   <div class="box-01">
