--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -1,7 +1,30 @@
 <ul class="box">
-  <li {% if app.request.attributes.get('_route') == 'user' %} id="submenu-active"{% endif %}><a href="{{ path('user') }}">User</a></li>
-  <li {% if app.request.attributes.get('_route') == 'mail' %} id="submenu-active"{% endif %}><a href="{{ path('user') }}">Mail</a></li>
-  <li {% if app.request.attributes.get('_route') == 'shop' %} id="submenu-active"{% endif %}><a href="{{ path('shop') }}">Shop</a></li>
-  <li {% if app.request.attributes.get('_route') == 'admin' %} id="submenu-active"{% endif %}><a href="{{ path('user') }}">Admin</a></li>
+  <li><a href="{{ path('user') }}">User</a>
+    <ul>
+      <li><a href="">Ban</a></li>
+      <li><a href="">Subscription</a></li>
+    </ul>
+  </li>
+  <li><a href="">Mail</a></li>
+  <li><a href="{{ path('shop') }}">Shop</a>
+    <ul>
+      <li><a href="">Product</a></li>
+      <li><a href="">Category</a></li>
+      <li><a href="">Order</a></li>
+      <li><a href="">Currency</a></li>
+      <li><a href="">Payment Method</a></li>
+      <li><a href="">Shipping</a></li>
+      <li><a href="">Special</a></li>
+      <li><a href="">Transaction</a></li>
+    </ul>
+  </li>
+  <li><a href="">Admin</a>
+    <ul>
+      <li><a href="{{ path('location') }}">Location</a></li>
+      <li><a href="{{ path('group') }}">Group</a></li>
+      <li><a href="{{ path('role') }}">Role</a></li>
+      <li><a href="">Configuration</a></li>
+    </ul>
+  </li>
 </ul>
 
