Added BanController Removed a link from left menu

--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -1,8 +1,7 @@
 <ul class="box">
   <li><a href="{{ path('user') }}">User</a>
     <ul>
-      <li><a href="">Ban</a></li>
-      <li><a href="">Subscription</a></li>
+      <li><a href="{{ path('ban') }}">Ban</a></li>
     </ul>
   </li>
   <li><a href="">Mail</a></li>
