--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -4,7 +4,7 @@
       <li><a href="{{ path('ban') }}">Ban</a></li>
     </ul>
   </li>
-  <li><a href="">Mail</a></li>
+  <li><a href="{{ path('mail') }}">Mail</a></li>
   <li><a href="{{ path('shop') }}">Shop</a>
     <ul>
       <li><a href="">Product</a></li>
