--- a/app/Resources/views/left_menu.html.twig
+++ b/app/Resources/views/left_menu.html.twig
@@ -22,7 +22,7 @@
       <li><a href="{{ path('location') }}">Location</a></li>
       <li><a href="{{ path('group') }}">Group</a></li>
       <li><a href="{{ path('role') }}">Role</a></li>
-      <li><a href="">Configuration</a></li>
+      <li><a href="{{ path('config') }}">Configuration</a></li>
     </ul>
   </li>
 </ul>
