--- a/src/Club/UserBundle/Resources/views/Location/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Location/index.html.twig
@@ -3,11 +3,11 @@
 {% block body %}
 
 <h1>Location</h1>
-<p class="box"><a href="{{ path('location_new') }}" class="btn-create"><span>Create location</span></a></p>
+<p class="box"><a href="{{ path('admin_location_new') }}" class="btn-create"><span>Create location</span></a></p>
 
 {% include "::flash.html.twig" %}
 
-<form method="post" action="{{ path('location_batch') }}">
+<form method="post" action="{{ path('admin_location_batch') }}">
 <table>
   <thead>
     <tr>
@@ -36,8 +36,8 @@
       <td>{{ location.id }}</td>
       <td>{{ location.locationName }}</td>
       <td>
-        {% include "::edit_link.html.twig" with {'url':path('location_edit', { 'id':location.id })} %}
-        {% include "::delete_link.html.twig" with {'url':path('location_delete', { 'id':location.id })} %}
+        {% include "::edit_link.html.twig" with {'url':path('admin_location_edit', { 'id':location.id })} %}
+        {% include "::delete_link.html.twig" with {'url':path('admin_location_delete', { 'id':location.id })} %}
       </td>
     </tr>
   {% else %}
