--- a/src/Club/UserBundle/Resources/views/Role/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Role/index.html.twig
@@ -2,23 +2,21 @@
 
 {% block body %}
 <h1>Role</h1>
-<p class="box"><a href="{{ path('role_new') }}" class="btn-create"><span>Create role</span></a></p>
 
 {% include "::flash.html.twig" %}
 
-<form method="post" action="{{ path('role_batch') }}">
+<form method="post" action="{{ path('admin_role_batch') }}">
 <table>
   <thead>
     <tr>
       <th>[x]</th>
       <th>Id</th>
       <th>Role</th>
-      <th>Actions</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="4" class="arrow-01">
+      <td colspan="3" class="arrow-01">
         <select name="" class="input-text">
           <option value="">Delete selected</option>
           <option value="">Remove selected</option>
@@ -34,10 +32,6 @@
       <td><input type="checkbox" /></td>
       <td>{{ role.id }}</td>
       <td>{{ role.roleName }}</td>
-      <td>
-        {% include "::edit_link.html.twig" with {'url':path('role_edit', { 'id':role.id })} %}
-        {% include "::delete_link.html.twig" with {'url':path('role_delete', { 'id':role.id })} %}
-      </td>
     </tr>
   {% else %}
   <tr>
