--- a/src/Club/UserBundle/Resources/views/Currency/new.html.twig
+++ b/src/Club/UserBundle/Resources/views/Currency/new.html.twig
@@ -4,7 +4,7 @@
 <h1>Currency</h1>
 
 <form method="post" action="{{ path('admin_currency_new') }}">
-{% include "ClubUserBundle:Location:form.html.twig" with {'form': form} %}
+{% include "ClubUserBundle:Currency:form.html.twig" with {'form': form} %}
 </form>
 
 {% endblock %}
