--- a/src/Club/UserBundle/Resources/views/Location/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Location/index.html.twig
@@ -38,6 +38,7 @@
       <td>
         {% include "::edit_link.html.twig" with {'url':path('admin_location_edit', { 'id':location.id })} %}
         {% include "::delete_link.html.twig" with {'url':path('admin_location_delete', { 'id':location.id })} %}
+        {% include "::config_link.html.twig" with {'url':path('admin_location_config', { 'id':location.id })} %}
       </td>
     </tr>
   {% else %}
